--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,9 @@
 [others]
 LocationToSaveZip = E:\PriceOutPut
+TwilioRecovery = XLRVJK5WEPLJ4YBNEARFZ9MM
+[EMAIL]
+ADDRESS = adsl.lamas@gmail.com
+APP_PASSWORD = hkoi pugm kysl rmen
+PASSWORD = adsl12345@#$%^
+GITHUB_USERNAME = zbi.drb@gmail.com
+GITHUB_PASSWORD = adsl.git.123
